--- a/app/index.html
+++ b/app/index.html
@@ -9,12 +9,13 @@
 
     {{content-for 'head'}}
 
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/jiggawatt.css">
 
     {{content-for 'head-footer'}}
   </head>
-  <body>
+  <body class="container">
     {{content-for 'body'}}
 
     <script src="assets/vendor.js"></script>
